# CW_5

C_WORK_5/: README.md  main.py  main_func.py  pyproject.toml
C_WORK_5/api_clients/: base_api.py  employer_info.py  hh_client.py  vacancy_info.py
C_WORK_5/db_pack/: config.py  database.ini  db_create.py  db_manager.py
