[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Andrew Kurin <andrew_kurin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
prettytable = "^3.10.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
